--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "test": "NODE_PATH=./resources/assets/jsx NODE_ENV=test mocha ./resources/assets/tests",
+    "test": "NODE_PATH=./resources/assets/jsx NODE_ENV=test mocha --compilers js:babel-core/register ./resources/assets/tests",
     "build": "NODE_ENV=production gulp",
     "dev": "gulp",
     "email": "gulp email",
@@ -24,6 +24,7 @@
     "assets-webpack-plugin": "^3.5.0",
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-optimize": "^1.0.1",
