--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "inky": "^1.3.7",
+    "mac-notify": "^1.0.0",
     "mocha": "^3.1.2",
     "redux-devtools": "^3.3.1",
     "webpack": "^1.13.3"
